--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,13 @@
 body {
-    background-color: azure;
+    margin: 0;
+    padding: 0;
+    background: url('images/background-image.jpg') center/cover no-repeat;
     color: darkgray;
     font-family: Arial, sans-serif;
 }
 
 header {
-    background-color: teal;
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 15px;
     text-align: center;
@@ -18,7 +20,7 @@ header {
 }
 
 .project-card {
-    background-color: darkgray;
+    background-color: rgba(0, 0, 0, 0.7);
     color: azure;
     padding: 15px;
     border-radius: 10px;
@@ -26,10 +28,15 @@ header {
     width: 300px;
 }
 
+.project-card header {
+    margin-bottom: 10px;
+}
+
 .project-card img {
     width: 100%;
+    height: 150px; /* Adjust the height as needed */
+    object-fit: cover;
     border-radius: 8px;
-    margin-top: 10px;
 }
 
 .external-link a {
@@ -39,6 +46,25 @@ header {
 
 .external-link a:hover {
     color: teal;
+}
+
+.gif-bar {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.gif-bar.top {
+    top: 0;
+}
+
+.gif-bar img {
+    width: 100%;
+    max-height: 100px; /* Adjust the max-height as needed */
+    object-fit: cover;
 }
 
 /* Box Model Properties */
