--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('images/background-image.jpg') center/cover no-repeat;
+    background: url('media/bingus.gif') center/cover no-repeat;
     color: darkgray;
     font-family: Arial, sans-serif;
+    overflow-x: hidden; /* Ensure horizontal scrolling is disabled */
 }
 
 header {
@@ -17,6 +18,8 @@ header {
     display: flex;
     justify-content: space-around;
     margin: 20px;
+    position: relative; /* Add relative positioning */
+    z-index: 1;
 }
 
 .project-card {
@@ -34,7 +37,7 @@ header {
 
 .project-card img {
     width: 100%;
-    height: 150px; /* Adjust the height as needed */
+    height: 150px;
     object-fit: cover;
     border-radius: 8px;
 }
@@ -46,25 +49,6 @@ header {
 
 .external-link a:hover {
     color: teal;
-}
-
-.gif-bar {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.gif-bar.top {
-    top: 0;
-}
-
-.gif-bar img {
-    width: 100%;
-    max-height: 100px; /* Adjust the max-height as needed */
-    object-fit: cover;
 }
 
 /* Box Model Properties */
