--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('media/bingus.gif') center/cover no-repeat;
+    background: url('media/bingSUS.jpg') center/cover no-repeat;
     color: darkgray;
     font-family: Arial, sans-serif;
     overflow-x: hidden; /* Ensure horizontal scrolling is disabled */
@@ -14,7 +14,7 @@ header {
     text-align: center;
 }
 
-.project-section {
+.bingus-section {
     display: flex;
     justify-content: space-around;
     margin: 20px;
@@ -22,7 +22,7 @@ header {
     z-index: 1;
 }
 
-.project-card {
+.bingus-card {
     background-color: rgba(0, 0, 0, 0.7);
     color: azure;
     padding: 15px;
@@ -31,13 +31,13 @@ header {
     width: 300px;
 }
 
-.project-card header {
+.bingus-card header {
     margin-bottom: 10px;
 }
 
-.project-card img {
+.bingus-card img {
     width: 100%;
-    height: 150px;
+    height: 250px;
     object-fit: cover;
     border-radius: 8px;
 }
@@ -52,16 +52,16 @@ header {
 }
 
 /* Box Model Properties */
-.project-card {
+.bingus-card {
     margin: 10px;
 }
 
-#project1 {
+#bingus1 {
     padding: 20px;
     background-color: teal;
 }
 
-#project2 {
+#bingus2 {
     padding: 20px;
     background-color: darkblue;
 }
